fixed fetch with post to portfolio route

--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -2,6 +2,9 @@
 
     <div class="col">
         portfolio info goes here
+        {{#each currentProjects}}
+            <div>{{name}}</div>
+        {{/each}}
     </div>
 </div>
 
