--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{!-- bootstrap --}}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/style.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-md">
+	<a class="navbar-brand" href="/about">Andrew Moses</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon">Portfolio</span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarColor02">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item">
+				<a class="nav-link" href="/contact" title="Current breakpoint tier">Contact</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/portfolio">Portfolio</a>
+			</li>
+		</ul>
+	</div>
+</nav>
     {{{body}}}
 
     <footer class="fixed-bottom">
-		<h5 class="text-white">Copyright 2020 by Andrew Moses</h5>
+		<h5 class="text-footer">Copyright 2020 by Andrew Moses</h5>
 	</footer>
 </body>
 </html>
