--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark">
-        <a class="navbar-brand" href="/about">Andrew Moses</a>
+        <a class="navbar-brand nav-text" href="/about">Andrew Moses</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">Portfolio</span>
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact" title="Current breakpoint tier">Contact</a>
+                    <a class="nav-link nav-text" href="/contact" title="Current breakpoint tier">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/portfolio">Portfolio</a>
+                    <a class="nav-link nav-text" href="/portfolio">Portfolio</a>
                 </li>
             </ul>
         </div>
