--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     {{!-- bootstrap --}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
     <title>{{title}}</title>
 </head>
@@ -33,10 +34,10 @@
     <div class="container">
         {{{body}}}
     </div>
-    
-    <footer class="fixed-bottom">
+
+    {{!-- <footer class="fixed-bottom">
         <h5 class="text-footer">Copyright 2020 by Andrew Moses</h5>
-    </footer>
+    </footer> --}}
 </body>
 
 </html>
