--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-md-8">
-        <div class="jumbotron shadow">
-            <h1 class="display-3">Featured Projects</h1>
+        <div class="jumbotron bg-dark shadow">
+            <h1 class="display-3" style="color: #ececec;"><span style="color: #7332af;">Featured</span> Projects</h1>
             <hr class="my-4">
-            <h6>Hover over a tile for details, then give it a click to view the corresponding repository on GitHub</h6>
+            <h5 style="color: #ececec;">Hover over a tile for details, then give it a click to view the corresponding repository on GitHub</h5>
         </div>
     </div>
     {{!-- <div class="col-md-4 chart-container">
