--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,16 +13,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark">
+    {{!-- <nav class="navbar navbar-expand-md bg-dark">
         <a class="navbar-brand nav-text" href="/about">Andrew Moses</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">Portfolio</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbarMd">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarColor02">
+        <div class="collapse navbar-collapse" id="collapsingNavbarMd">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link nav-text" href="/contact" title="Current breakpoint tier">Contact</a>
+                    <a class="nav-link nav-text" href="/contact">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-text" href="/portfolio">Portfolio</a>
@@ -30,7 +29,7 @@
             </ul>
         </div>
 
-    </nav>
+    </nav> --}}
     <div class="container">
         {{{body}}}
     </div>
