added navigation buttons and updated styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,31 +5,62 @@ body {
   flex-direction: column;
 }
 
+.content-container {
+    width: auto;
+}
+
 a:hover, a:focus, a:active {
     text-decoration: none;
     color: #ececec;
 }
 
-/* .navbar {
-    margin-bottom: 50px;
-} */
-
-.jumbotron {
+.jumbo-nav-row {
     margin-top: 50px;
+    margin-bottom: 47px;
 }
 
-.nav-text {
-    color: #ececec;
+.navigation-headline {
+    margin-bottom: 18px;
 }
 
-.nav-item {
+.btn-group-vertical {
+    margin-top: 47px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-about {
     background-color: #7332af;
-    border-radius: 5%;
-    margin-left: 10px;
+    color: white;
+    width: 80px !important;
+    height: 80px !important;
+    border-radius: 50% !important;
+    margin: 18px;
 }
 
-.navbar-toggler {
+.btn-contact {
     background-color: #7332af;
+    color: white;
+    width: 80px !important;
+    height: 80px !important;
+    border-radius: 50% !important;
+    margin: 18px;
+}
+
+.btn:hover {
+    transform-origin: center;
+    transform: scale(1.3);
+    transition: .5s ease;
+}
+
+.btn-portfolio {
+    background-color: #7332af;
+    color: white;
+    width: 80px !important;
+    height: 80px !important;
+    border-radius: 50% !important;
+    margin: 18px;
 }
 
 .overlay {
@@ -66,23 +97,16 @@ a:hover, a:focus, a:active {
 
 .overlay:hover .overlay-text {
     opacity: 1;
-    /* border-radius: 50%; */
 }
 
 .overlay:hover .overlay-img {
     opacity: .3;
-    /* border-radius: 50%; */
 }
 
 .overlay:hover .overlay {
     opacity: 1;
-    /* border-radius: 50%; */
 }
 
 .projects-row {
     margin-bottom: 50px;
 }
-
-/* footer {
-    text-align: center;
-} */
