--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,5 +38,5 @@
         <h5 class="text-footer">Copyright 2020 by Andrew Moses</h5>
     </footer> --}}
 </body>
-
+    <script src="https://kit.fontawesome.com/00a6201a8b.js" crossorigin="anonymous"></script>
 </html>
