--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -16,7 +16,7 @@
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
-                    <h3 class="dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
                 </div>
                 <a href="/contact"></a><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
                 <button type="button" class="btn btn-sm shadow btn-about">About</button>
@@ -41,14 +41,23 @@
         </div>
         {{/each}}
     </div>
-</div>
 
-<div class="row links-row">
-    <div class="col-sm-12">
-        
+    <div class="row fab-row d-flex justify-content-center">
+        <div class="">
+            <a href="https://github.com/andrewmosesdrive" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+        </div>
+        <div class="">
+            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a>
+        </div>
+        <div class="">
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i class="fab fa-amazon fa-3x text-dark"></i></a>
+        </div>
+        <div class="">
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i class="fab fa-instagram fa-3x text-dark"></i></a>
+        </div>
     </div>
-
 </div>
+
 
 {{!-- <script>
     let myChart = document.getElementById('myChart').getContext("2d");
