--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,42 +1,59 @@
 body {
-  background: -webkit-linear-gradient(to bottom left, #c7aee4, #ececec, #c7aee4);
+  background: -webkit-linear-gradient(
+    to bottom left,
+    #c7aee4,
+    #ececec,
+    #c7aee4
+  );
   background: linear-gradient(to bottom left, #c7aee4, #ececec, #c7aee4);
   display: flex;
   flex-direction: column;
 }
 
 .content-container {
-    width: auto;
+  width: auto;
 }
 
-a:hover, a:focus, a:active {
-    text-decoration: none;
-    color: #ececec;
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: #ececec;
 }
 
 .jumbo-nav-row {
-    margin-top: 50px;
-    margin-bottom: 47px;
+  margin-top: 50px;
+  margin-bottom: 47px;
+}
+
+.jumbotron {
+  animation-duration: 1s;
+  animation-name: slidein-to-left;
+}
+
+@keyframes slidein-to-left {
+  from {
+    margin-left: 400%;
+    width: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 .navigation-headline {
-    margin-bottom: 18px;
+  margin-bottom: 18px;
+  animation-duration: 1.33s;
+  animation-name: slidein-to-left;
 }
 
 .btn-group-vertical {
-    margin-top: 47px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-about {
-    background-color: #7332af;
-    color: white;
-    width: 80px !important;
-    height: 80px !important;
-    border-radius: 50% !important;
-    margin: 18px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-contact {
@@ -46,22 +63,35 @@ a:hover, a:focus, a:active {
     height: 80px !important;
     border-radius: 50% !important;
     margin: 18px;
+    animation-duration: 1.66s;
+    animation-name: slidein-to-left;
+  }
+
+.btn-about {
+  background-color: #7332af;
+  color: white;
+  width: 80px !important;
+  height: 80px !important;
+  border-radius: 50% !important;
+  margin: 18px;
+  animation-duration: 2.33s;
+  animation-name: slidein-to-left;
 }
 
 .btn:hover {
-    transform-origin: center;
-    transform: scale(1.3);
-    transition: .5s ease;
-    color: white;
+  transform-origin: center;
+  transform: scale(1.3);
+  transition: 0.5s ease;
+  color: white;
 }
 
 .btn-portfolio {
-    background-color: #7332af;
-    color: white;
-    width: 80px !important;
-    height: 80px !important;
-    border-radius: 50% !important;
-    margin: 18px;
+  background-color: #7332af;
+  color: white;
+  width: 80px !important;
+  height: 80px !important;
+  border-radius: 50% !important;
+  margin: 18px;
 }
 
 .overlay {
@@ -79,7 +109,7 @@ a:hover, a:focus, a:active {
   display: block;
   transition: 0.5s ease;
   backface-visibility: hidden;
-  height: 300px; 
+  height: 300px;
   width: 100%;
   border-radius: 2%;
 }
@@ -97,38 +127,38 @@ a:hover, a:focus, a:active {
 }
 
 .overlay:hover .overlay-text {
-    opacity: 1;
+  opacity: 1;
 }
 
 .overlay:hover .overlay-img {
-    opacity: .3;
+  opacity: 0.3;
 }
 
 .overlay:hover .overlay {
-    opacity: 1;
+  opacity: 1;
 }
 
 .projects-row {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .fab {
-    color: #353434 !important;
-    
-    /* padding: 17px; */
-    margin: 10px;
+  color: #353434 !important;
 
-    /* border-radius: 50%; */
+  /* padding: 17px; */
+  margin: 10px;
+
+  /* border-radius: 50%; */
 }
 
 .fab:hover {
-    transform-origin: center;
-    transform: scale(1.3);
-    transition: .5s ease;
-    color: white;
+  transform-origin: center;
+  transform: scale(1.3);
+  transition: 0.5s ease;
+  color: #7332af !important;
 }
 
 .fab-row {
-    margin-top: 175px;
-    margin-bottom: 50px;
+  margin-top: 175px;
+  margin-bottom: 50px;
 }
