--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -18,8 +18,8 @@
                 <div class="navigation-headline">
                     <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
                 </div>
-                <a href="/contact"></a><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
-                <button type="button" class="btn btn-sm shadow btn-about">About</button>
+                <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact">Contact</button></a>
+                <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
                 {{!-- <button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button> --}}
             </div>
         </div>
@@ -50,10 +50,10 @@
             <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i class="fab fa-amazon fa-3x text-dark"></i></a>
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i class="fab fa-instagram fa-3x text-dark"></i></a>
         </div>
         <div class="">
-            <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i class="fab fa-instagram fa-3x text-dark"></i></a>
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i class="fab fa-amazon fa-3x text-dark"></i></a>
         </div>
     </div>
 </div>
