updated contact page with nodemailer for email capabilities on behalf of the user

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,6 +92,8 @@ a:active {
   height: 80px !important;
   border-radius: 50% !important;
   margin: 18px;
+  animation-duration: 1.66s;
+  animation-name: slidein-to-left;
 }
 
 .overlay {
@@ -161,4 +163,9 @@ a:active {
 .fab-row {
   margin-top: 175px;
   margin-bottom: 50px;
+}
+
+.btn-email {
+    background-color: #7332af;
+    color: white;
 }
