--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,6 +1,44 @@
-<div class="row">
+<div class="container content-container">
+    <div class="row jumbo-nav-row">
+        <div class="col-md-8">
+            <div class="jumbotron bg-dark shadow">
+                <h1 class="display-3" style="color: #ececec;">Hello<span style="color: #7332af;"> World!</span></h1>
+                <hr class="my-4">
+                <h5 style="color: #ececec;">Thanks for paying me a visit. Below is some information about me, to the right are some Navigation buttons for pages within my portfolio, and at the bottom of each page you'll find links to my social media sites. </h5>
+            </div>
+        </div>
+        {{!-- <div class="col-md-4 chart-container">
+        <canvas id="myChart" class="myChart" height="260px"></canvas>
+    </div> --}}
+        <div class="col-md-4 btn-col">
+            <div class="btn-group-vertical">
+                <div class="navigation-headline">
+                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                </div>
+                <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
+            </div>
+        </div>
+    </div>
+   
 
-    <div class="col">
-        all about me and stuff
+
+
+    <div class="row fab-row d-flex justify-content-center">
+        <div class="">
+            <a href="https://github.com/andrewmosesdrive" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+        </div>
+        <div class="">
+            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank"><i
+                    class="fab fa-linkedin-in fa-3x"></i></a>
+        </div>
+        <div class="">
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i
+                    class="fab fa-instagram fa-3x text-dark"></i></a>
+        </div>
+        <div class="">
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i
+                    class="fab fa-amazon fa-3x text-dark"></i></a>
+        </div>
     </div>
 </div>
