--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -16,7 +16,7 @@
                     <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
                 </div>
                 <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
-                <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
+                <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
             </div>
         </div>
     </div>
