fixed word overflow in jumbotron

--- a/views/contact-failure.handlebars
+++ b/views/contact-failure.handlebars
@@ -2,26 +2,30 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;">Well, this is<span style="color: #7332af;"> Embarrassing</span></h1>
+                <h1 class="display-3" style="color: #ececec;">Big<span style="color: #7332af;">
+                        Yikes</span></h1>
                 <hr class="my-4">
-                <h5 style="color: #ececec;">Oops! Something went wrong when you tried to send that email. You might want to try sending me a message on LinkedIn until I can figure out what happened. Use the LinkedIn icon below to do so, or continue exploring my Portfolio via the Navigation buttons.</h5>
+                <h5 style="color: #ececec;">Oops! Something went wrong when you tried to send that email. You might want
+                    to try sending me a message on LinkedIn until I can figure out what happened. Use the LinkedIn icon
+                    below to do so, or continue exploring my Portfolio via the Navigation buttons.</h5>
             </div>
         </div>
-    </div>
-    {{!-- <div class="col-md-4 chart-container">
+
+        {{!-- <div class="col-md-4 chart-container">
         <canvas id="myChart" class="myChart" height="260px"></canvas>
     </div> --}}
-    <div class="col-md-4 btn-col">
-        <div class="btn-group-vertical">
-            <div class="navigation-headline">
-                <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+        <div class="col-md-4 btn-col">
+            <div class="btn-group-vertical">
+                <div class="navigation-headline">
+                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                </div>
+                <a href="/portfolio"><button type="button"
+                        class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
             </div>
-            <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
-            <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
         </div>
     </div>
 </div>
-
 
 
 
