--- a/views/contact-success.handlebars
+++ b/views/contact-success.handlebars
@@ -4,23 +4,28 @@
             <div class="jumbotron bg-dark shadow">
                 <h1 class="display-3" style="color: #ececec;">Cool<span style="color: #7332af;"> Beans!</span></h1>
                 <hr class="my-4">
-                <h5 style="color: #ececec;">Your message has been sent, and should be delivered to me via email promptly. I'll do my best to respond as soon as possible, so hang tight, and thank you for reaching out! From here, use the Navigation buttons to continue viewing my portfolio, or check out my social media links below.</h5>
+                <h5 style="color: #ececec;">Your message has been sent, and should be delivered to me via email
+                    promptly. I'll do my best to respond as soon as possible, so hang tight, and thank you for reaching
+                    out! From here, use the Navigation buttons to continue viewing my portfolio, or check out my social
+                    media links below.</h5>
             </div>
         </div>
-    </div>
-    {{!-- <div class="col-md-4 chart-container">
+        {{!-- <div class="col-md-4 chart-container">
         <canvas id="myChart" class="myChart" height="260px"></canvas>
     </div> --}}
-    <div class="col-md-4 btn-col">
-        <div class="btn-group-vertical">
-            <div class="navigation-headline">
-                <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+        <div class="col-md-4 btn-col">
+            <div class="btn-group-vertical">
+                <div class="navigation-headline">
+                    <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
+                </div>
+                <a href="/portfolio"><button type="button"
+                        class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
             </div>
-            <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
-            <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
         </div>
     </div>
 </div>
+
 
 
 
