--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,23 +4,50 @@
             <div class="jumbotron bg-dark shadow">
                 <h1 class="display-3" style="color: #ececec;">Hello<span style="color: #7332af;"> World!</span></h1>
                 <hr class="my-4">
-                <h5 style="color: #ececec;">Thanks for paying me a visit. Below is some information about me, to the right are some Navigation buttons for pages within my portfolio, and at the bottom of each page you'll find links to my social media sites. </h5>
+                <h5 style="color: #ececec;">My name is Andrew Moses. I'm a Full-Stack Web Developer, Team Leader for
+                    DevCore, and author. </h5>
+                <h5 style="color: #ececec;">Curious about coding projects I'm working on, or interested in contacting
+                    me? Just follow the big purple Navigation buttons. Interested in my social media or my writing? Just
+                    follow the links at the bottom of each page. Thanks for stopping by! </h5>
             </div>
         </div>
-        {{!-- <div class="col-md-4 chart-container">
-        <canvas id="myChart" class="myChart" height="260px"></canvas>
-    </div> --}}
+
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
                     <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
                 </div>
-                <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
-                <a href="/contact"><button type="button" class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
+                <a href="/portfolio"><button type="button"
+                        class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                <a href="/contact"><button type="button"
+                        class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
             </div>
         </div>
     </div>
-   
+    {{!-- <div class="row">
+        <div class="code-icons"><i class="devicon-bootstrap-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-css3-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-express-original"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-handlebars-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-heroku-original"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-html5-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-javascript-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-jquery-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-mysql-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-nodejs-plain"></i>
+        </div>
+        <div class="code-icons"><i class="devicon-visualstudio-plain"></i>
+        </div>
+    </div> --}}
 
 
 
