--- a/views/contact-failure.handlebars
+++ b/views/contact-failure.handlebars
@@ -31,17 +31,17 @@
 
 <div class="row fab-row d-flex justify-content-center">
     <div class="">
-        <a href="https://github.com/andrewmosesdrive" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+        <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"><i class="fab fa-github fa-3x"></i></a>
     </div>
     <div class="">
-        <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a>
+        <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"><i class="fab fa-linkedin-in fa-3x"></i></a>
     </div>
     <div class="">
-        <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i
+        <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"><i
                 class="fab fa-instagram fa-3x text-dark"></i></a>
     </div>
     <div class="">
-        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i
+        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"><i
                 class="fab fa-amazon fa-3x text-dark"></i></a>
     </div>
 </div>
