--- a/views/contact-success.handlebars
+++ b/views/contact-success.handlebars
@@ -2,7 +2,7 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;">Cool<span style="color: #7332af;"> Beans!</span></h1>
+                <h1 class="display-3" style="color: #ececec;">Cool<span style="color: #9b5ed4;"> Beans!</span></h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">Your message has been sent, and should be delivered to me via email
                     promptly. I'll do my best to respond as soon as possible, so hang tight, and thank you for reaching
@@ -10,9 +10,6 @@
                     media links below.</h5>
             </div>
         </div>
-        {{!-- <div class="col-md-4 chart-container">
-        <canvas id="myChart" class="myChart" height="260px"></canvas>
-    </div> --}}
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
@@ -32,17 +29,17 @@
 
 <div class="row fab-row d-flex justify-content-center">
     <div class="">
-        <a href="https://github.com/andrewmosesdrive" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+        <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"><i class="fab fa-github fa-3x"></i></a>
     </div>
     <div class="">
-        <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank"><i class="fab fa-linkedin-in fa-3x"></i></a>
+        <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"><i class="fab fa-linkedin-in fa-3x"></i></a>
     </div>
     <div class="">
-        <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i
+        <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"><i
                 class="fab fa-instagram fa-3x text-dark"></i></a>
     </div>
     <div class="">
-        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i
+        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"><i
                 class="fab fa-amazon fa-3x text-dark"></i></a>
     </div>
 </div>
