--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -2,16 +2,13 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;">Say<span style="color: #7332af;"> Hello</span></h1>
+                <h1 class="display-3" style="color: #ececec;">Say<span style="color: #9b5ed4;"> Hello</span></h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">Use the form below to shoot me an email. If you'd prefer reaching out via
                     social media, or you're curious about my writing, take your pick from the links at the very
                     bottom of each page.</h5>
             </div>
         </div>
-        {{!-- <div class="col-md-4 chart-container">
-        <canvas id="myChart" class="myChart" height="260px"></canvas>
-    </div> --}}
         <div class="col-md-4 btn-col">
             <div class="btn-group-vertical">
                 <div class="navigation-headline">
@@ -19,7 +16,6 @@
                 </div>
                 <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
-                {{!-- <button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button> --}}
             </div>
         </div>
     </div>
@@ -55,18 +51,18 @@
 
     <div class="row fab-row d-flex justify-content-center">
         <div class="">
-            <a href="https://github.com/andrewmosesdrive" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"><i class="fab fa-github fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank"><i
+            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"><i
                     class="fab fa-linkedin-in fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.instagram.com/amwriteswords/" target="_blank"><i
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"><i
                     class="fab fa-instagram fa-3x text-dark"></i></a>
         </div>
         <div class="">
-            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"><i
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"><i
                     class="fab fa-amazon fa-3x text-dark"></i></a>
         </div>
     </div>
