updated font on about page for better contrast

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -2,7 +2,7 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;">Hello<span style="color: #7332af;"> World!</span></h1>
+                <h1 class="display-3" style="color: #ececec;">Hello<span style="color: #9b5ed4;"> World!</span></h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">My name is Andrew Moses. I'm a Full-Stack Web Developer, Team Leader for
                     DevCore, and author. </h5>
