--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="Description" content="Portfolio by Andrew Moses">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {{!-- bootstrap --}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
