--- a/views/contact-success.handlebars
+++ b/views/contact-success.handlebars
@@ -2,7 +2,7 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;">Cool<span style="color: #9b5ed4;"> Beans!</span></h1>
+                <h1 class="display-3" style="color: #ececec;">Cool<span style="color: #c095e9;"> Beans!</span></h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">Your message has been sent, and should be delivered to me via email
                     promptly. I'll do my best to respond as soon as possible, so hang tight, and thank you for reaching
@@ -22,25 +22,22 @@
         </div>
     </div>
 </div>
-
-
-
-
-
 <div class="row fab-row d-flex justify-content-center">
     <div class="">
-        <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"><i class="fab fa-github fa-3x"></i></a>
+        <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"
+            aria-label="Link to my github page"><i class="fab fa-github fa-3x"></i></a>
     </div>
     <div class="">
-        <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"><i class="fab fa-linkedin-in fa-3x"></i></a>
+        <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"
+            aria-label="Link to my linkedin page"><i class="fab fa-linkedin-in fa-3x"></i></a>
     </div>
     <div class="">
-        <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"><i
-                class="fab fa-instagram fa-3x text-dark"></i></a>
+        <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"
+            aria-label="Link to my instagram page"><i class="fab fa-instagram fa-3x text-dark"></i></a>
     </div>
     <div class="">
-        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"><i
-                class="fab fa-amazon fa-3x text-dark"></i></a>
+        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"
+            aria-label="Link to my amazon product page"><i class="fab fa-amazon fa-3x text-dark"></i></a>
     </div>
 </div>
 </div>
