--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -2,7 +2,7 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;">Say<span style="color: #9b5ed4;"> Hello</span></h1>
+                <h1 class="display-3" style="color: #ececec;">Say<span style="color: #c095e9;"> Hello</span></h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">Use the form below to shoot me an email. If you'd prefer reaching out via
                     social media, or you're curious about my writing, take your pick from the links at the very
@@ -14,22 +14,22 @@
                 <div class="navigation-headline">
                     <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3>
                 </div>
-                <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
+                <a href="/portfolio"><button type="button"
+                        class="btn btn-sm shadow btn-portfolio">Portfolio</button></a>
                 <a href="/about"><button type="button" class="btn btn-sm shadow btn-about">About</button></a>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-12 col-md-8">
-            <form action="/contact" id="contact-form" method="post" role="form" class=""
->
+            <form action="/contact" id="contact-form" method="post" role="form" class="">
                 <fieldset>
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" class="form-control" id="name" aria-describedby="name" name="name"
                             placeholder="Required">
                     </div>
-                     <div class="form-group">
+                    <div class="form-group">
                         <label for="email">Your Email</label>
                         <input type="text" class="form-control" id="email" aria-describedby="email" name="email"
                             placeholder="Also required">
@@ -37,7 +37,7 @@
                             anyone else (unless you ask me to).</small>
                     </div>
                     <div class="form-group">
-                        <label for="exampleTextarea">The Message</label>
+                        <label for="message">The Message</label>
                         <textarea class="form-control" id="message" rows="3" name="message"
                             placeholder="Yep, you guessed it; this field is required too!"></textarea>
                     </div>
@@ -51,18 +51,20 @@
 
     <div class="row fab-row d-flex justify-content-center">
         <div class="">
-            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"
+                aria-label="Link to my github page"><i class="fab fa-github fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"><i
-                    class="fab fa-linkedin-in fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"
+                aria-label="Link to my linkedin page"><i class="fab fa-linkedin-in fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"><i
-                    class="fab fa-instagram fa-3x text-dark"></i></a>
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"
+                aria-label="Link to my instagram page"><i class="fab fa-instagram fa-3x text-dark"></i></a>
         </div>
         <div class="">
-            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"><i
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank"
+                rel="noreferrer" aria-label="Link to my amazon product page"><i
                     class="fab fa-amazon fa-3x text-dark"></i></a>
         </div>
     </div>
