--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -2,7 +2,7 @@
     <div class="row jumbo-nav-row">
         <div class="col-md-8">
             <div class="jumbotron bg-dark shadow">
-                <h1 class="display-3" style="color: #ececec;"><span style="color: #9b5ed4;">Featured</span> Projects
+                <h1 class="display-3" style="color: #ececec;"><span style="color: #c095e9;">Featured</span> Projects
                 </h1>
                 <hr class="my-4">
                 <h5 style="color: #ececec;">Hover over a tile for details, then give it a click to view the
@@ -25,7 +25,7 @@
         {{#each currentProjects}}
         <div class="col-md-4">
             <figure class="overlay shadow">
-                <a href="{{url}}" target="_blank"><img id="overlay-img" class="overlay-img shadow"
+                <a href="{{url}}" target="_blank" rel="noreferrer"><img id="overlay-img" class="overlay-img shadow"
                         src="{{openGraphImageUrl}}" alt="Still image of {{name}}">
                     <div class="overlay-text">
                         <h6 class="overlay-title">{{name}}</h6>
@@ -40,16 +40,16 @@
 
     <div class="row fab-row d-flex justify-content-center">
         <div class="">
-            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://github.com/andrewmosesdrive" target="_blank" rel="noreferrer" aria-label="Link to my github page"><i class="fab fa-github fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer"><i class="fab fa-linkedin-in fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/andrewjmoses/" target="_blank" rel="noreferrer" aria-label="Link to my linkedin page"><i class="fab fa-linkedin-in fa-3x"></i></a>
         </div>
         <div class="">
-            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer"><i class="fab fa-instagram fa-3x text-dark"></i></a>
+            <a href="https://www.instagram.com/amwriteswords/" target="_blank" rel="noreferrer" aria-label="Link to my instagram page"><i class="fab fa-instagram fa-3x text-dark"></i></a>
         </div>
         <div class="">
-            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"><i class="fab fa-amazon fa-3x text-dark"></i></a>
+            <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer" aria-label="Link to my amazon product page"><i class="fab fa-amazon fa-3x text-dark"></i></a>
         </div>
     </div>
 </div>
